--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 <PageTitle>Hola Mundo!</PageTitle>
 
-<h1>Hola a todos!<h1>
-<p>Esta es la pagina web de Aaron Carmona para el primer parcial<p>
+<h1>Hola a todos!</h1>
+<p>Esta es la pagina web de Aaron Carmona para el primer parcial</p>
+<p>Se me olvido comprar el pan</p>
